removing the temporary tex file
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/r4x@12 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/R4X/inst/doc/Makefile
+++ b/pkg/R4X/inst/doc/Makefile
@@ -3,6 +3,7 @@ r4xslides.pdf:
 	Rscript --vanilla -e "Sweave('r4xslides.Rnw')"
 	sed "s/begin{frame}/begin{frame}[fragile]/" r4xslides.tex > tmp.tex
 	sed "s/\[fragile\]\[plain\]/[plain]/" tmp.tex > r4xslides.tex
+	rm tmp.tex
 	pdflatex r4xslides.tex
 	pdflatex r4xslides.tex
 clean:
