--- a/pkg/R4X/DESCRIPTION
+++ b/pkg/R4X/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: R4X
 Type: Package
 Title: Manipulation of XML structures
-Version: 0.1-20
-Date: 2008-08-10
-Author: Romain Francois <rfrancois@mango-solutions.com>
-Maintainer: Mango Solutions <suppport@mango-solutions.com>
+Version: 0.1-21
+Date: 2008-08-31
+Author: Romain Francois <francoisromain@free.fr>
+Maintainer: Romain Francois <francoisromain@free.fr>
 Description: Manipulation of XML structures. Attempt to port some of the concepts from
   the javascript extension E4X.
 License: GPL version 3.0
