using a textConnection in xmlNode instead of a temp file
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/r4x@22 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/R4X/DESCRIPTION
+++ b/pkg/R4X/DESCRIPTION
@@ -1,12 +1,11 @@
 Package: R4X
 Type: Package
 Title: Manipulation of XML structures
-Version: 0.1-22
+Version: 0.1-23
 Date: 2008-08-31
 Author: Romain Francois <francoisromain@free.fr>
 Maintainer: Romain Francois <francoisromain@free.fr>
-Description: Manipulation of XML structures. Attempt to port some of the concepts from
-  the javascript extension E4X.
+Description: Manipulation of XML structures. Attempt to port some of
+        the concepts from the javascript extension E4X.
 License: GPL version 3.0
 Depends: XML, brew, operators
-
